# vector-db

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  requirements.txt
.github/workflows/: ci.yml
src/: embeddings.rs  engine.rs  health.rs  index.rs  lib.rs  main.rs  storage.rs
tests/: engine_empty.rs  engine_smoke.rs  engine_validation.rs  http_api.rs
web/: .eslintrc.json  package-lock.json  tailwind.config.ts  tsconfig.json
web/app/: layout.tsx  page.tsx
