[package]
name = "self_healing_vector_db"
version = "0.1.0"
edition = "2021"

[lib]
name = "self_healing_vector_db"
path = "src/lib.rs"

[[bin]]
name = "self_healing_vector_db_server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
hnsw_rs = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }
bytemuck = { version = "1.16", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
# ONNX Runtime (not used yet, but kept for future embedding support).
# Needs a prerelease version explicitly:
ort = { version = "2.0.0-rc.10", features = ["download-binaries"] }

[dev-dependencies]
tempfile = "3.10"


